# graph-visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
src/: algorithms.c  algorithms.h  common.c  common.h  graph.c  graph.h  main.c  node.c  node.h  physics.c  physics.h  poisson.c  poisson.h  render.c  render.h  spring_layout.c  spring_layout.h  text.c  text.h  ui.c  ui.h
